修复了第二界面偶尔崩溃的bug
更新了3.09的api接口

--- a/Mars最终版/Mars/Mars/ClientSecretShangHai.plist
+++ b/Mars最终版/Mars/Mars/ClientSecretShangHai.plist
@@ -2,75 +2,79 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>138</key>
+	<string>e440c58cd4f34da9a40e90123a18bc82</string>
+	<key>137</key>
+	<string>a0e0c50312c7d6feb168195107f1bd95</string>
 	<key>135</key>
-	<string>c348e2de9117199834394261b44868cc</string>
+	<string>93ff2db68a6b2cd30f5d09adc96f4006</string>
 	<key>133</key>
-	<string>f8f54069cfb3410b2f0b091346979b8a</string>
+	<string>51a8f93a76cb5eee2c7f50f3c463d319</string>
 	<key>130</key>
-	<string>4b79830f5de40915ba6b3827655450b2</string>
+	<string>63614ab04dd026fe900a9a88882f7221</string>
 	<key>126</key>
-	<string>7c5c929bac0ef203d141a2f064f4f0b4</string>
+	<string>a7759ec3fef80680b397eee45fc17cbf</string>
 	<key>125</key>
-	<string>866a1981251de5e3d4e00395ae2ac1d3</string>
+	<string>d5bd802b34bab674eaa913480173470b</string>
 	<key>121</key>
-	<string>fddae541c71c70f9b8a21f2a5df1e470</string>
+	<string>bb35faf4657ca6a3e91927df30a43140</string>
 	<key>119</key>
-	<string>80cc8743d14cbe37329bd6dc0241a1c2</string>
+	<string>df7a5ee4bcad172a9c8b1527405ef723</string>
 	<key>115</key>
-	<string>0a073fb0d8c8a79fec0bd03281eb05c3</string>
+	<string>bd229494cdf31b1363cec0832562b5e5</string>
 	<key>109</key>
-	<string>1d279822473e05bbe913325a9e35c394</string>
+	<string>485767d1a8dcea2ea71d707cd763bd9a</string>
 	<key>105</key>
-	<string>b458997eff1dbb82ee37bbd6aefc80d3</string>
+	<string>a3ed162b880f8be3d774b81d3a9f1947</string>
 	<key>103</key>
-	<string>a8bbcade640a1a5f12b5e92bdbed0e59</string>
+	<string>3c1c54e591cc951230f6b448dbe9bca9</string>
 	<key>97</key>
-	<string>56516a974f47606f2c95f4dc909264f0</string>
+	<string>614c7b497f40fc691429a20d914382df</string>
 	<key>95</key>
-	<string>c5d6f11b614c84d195c56f7deb432344</string>
+	<string>ee02ac1acfee6cf81141cae2b3e0aedd</string>
 	<key>92</key>
-	<string>1ce909179331f35d5d6e8fdcc255e98f</string>
+	<string>f1db9c1551d30aabd5ee3915b3c8faa2</string>
 	<key>86</key>
-	<string>4c21482650beb9b84bb1979a48c312a5</string>
+	<string>623f13a9067aa79e2fd7ad372ba5e926</string>
 	<key>84</key>
-	<string>a88a3c47d3be8b3971c1517e1779ff26</string>
+	<string>b1393697e0e6f06352a344e368a9d6e7</string>
 	<key>81</key>
-	<string>c1d7293f9cad1c3797bcdae8eb43d324</string>
+	<string>8b6afacc5182cb1e5f0325c89a7979ef</string>
 	<key>78</key>
-	<string>e2487394494f11c31df54736f9151a21</string>
+	<string>92550ff75356780db00942282dfca05b</string>
 	<key>75</key>
-	<string>a020e862c292e7e778fc1ef889d1ccdd</string>
+	<string>7c73aaa7844393962c24e98018101ab5</string>
 	<key>68</key>
-	<string>2e62cb6e9f23c3e68f12187aadf9176a</string>
+	<string>28bde29d12a46cc3d1f79583c5320e79</string>
 	<key>65</key>
-	<string>834447e06a3b5676956d09dcd627986c</string>
+	<string>e39b13621ad9adef29061d86cf4e87b4</string>
 	<key>60</key>
-	<string>d11556258ab499ccf79a479bae46e919</string>
+	<string>1099588a910249b7ec787e96aab63967</string>
 	<key>55</key>
-	<string>2f6863fcc21eed6fec040258a47af358</string>
+	<string>952adeee8c9f1752e56a68df933056b7</string>
 	<key>52</key>
-	<string>f3ebb6a38d7a8148a6101f014a5e4372</string>
+	<string>6de6133e52f65613077eadccabf921df</string>
 	<key>46</key>
-	<string>500e9ad5be414b4e5dc1eafc2a6a2527</string>
+	<string>e2cc11b18bc1890d96432f97ce34a2d5</string>
 	<key>45</key>
-	<string>9907f66001d440efa128c6942fedb098</string>
+	<string>60ded5baa27b72f2275d6702b6f4e07d</string>
 	<key>41</key>
-	<string>a52704870df34525264091173b00301a</string>
+	<string>5553107fad3307464f4e9984592dd613</string>
 	<key>36</key>
-	<string>28e24036ac99eadc538d45025d27c4aa</string>
+	<string>547db33cc040f8236f5f0999965b05ea</string>
 	<key>32</key>
-	<string>c491d4e44d657f5fe003f4e97d789212</string>
+	<string>5ad1081863757655791df38793b7b043</string>
 	<key>28</key>
-	<string>047c1ab8a4de1ffdea7512794f64c21a</string>
+	<string>8e6b076d3f0048322642b0f865fc5b83</string>
 	<key>24</key>
-	<string>0ed08ec1449b9b93a723587ff0f2c174</string>
+	<string>68312bd4310928ea1cb9d374c6b5a6c7</string>
 	<key>22</key>
-	<string>d08b6f9a99ffb3c66a9a03e889b665e0</string>
+	<string>8f41ee7374da6c80aea9537cf54a34b6</string>
 	<key>13</key>
-	<string>0d3c03a718232e9dee2e7f5aa7302e49</string>
+	<string>bf7d1e9ca7b8efe3c15848dacb40582b</string>
 	<key>12</key>
-	<string>4f4600cae785c9164b04454152bd0f46</string>
+	<string>c1778d137fef8cd5790e5059dbda1264</string>
 	<key>11</key>
-	<string>a631067898811bfb0b4f619da3970d20</string>
+	<string>638b1b4412695fd90313628e9a8266d5</string>
 </dict>
 </plist>
